[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/torre_canhao.png" type="Texture" id=1]
[ext_resource path="res://scripts/tower_0.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 100.0

[node name="tower_0" type="StaticBody2D"]
position = Vector2( 246, 134 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -14 )
rotation = 3.14159
frames = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
color = Color( 1, 1, 1, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 13, 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
